--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
   Hello world
+  <button onclick="playRound(0, getComputerChoice())"> Rock </button>
+  <button onclick="playRound(1, getComputerChoice())"> Paper </button>
+  <button onclick="playRound(2, getComputerChoice())"> Scissors </button>
   <script src="script.js"></script>
 </body>
 
