Working tacking and display score

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 <body>
   Hello world
-  <button onclick="playRound(0, getComputerChoice())"> Rock </button>
-  <button onclick="playRound(1, getComputerChoice())"> Paper </button>
-  <button onclick="playRound(2, getComputerChoice())"> Scissors </button>
+  <button onclick="playGame(0)"> Rock </button>
+  <button onclick="playGame(1)"> Paper </button>
+  <button onclick="playGame(2)"> Scissors </button>
+  <p> playRound() </p>
   <script src="script.js"></script>
 </body>
 
