--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
-  Hello world
+  Play 
   <button onclick="playGame(0)"> Rock </button>
   <button onclick="playGame(1)"> Paper </button>
   <button onclick="playGame(2)"> Scissors </button>
-  <p> playRound() </p>
+  <p>   </p>
   <script src="script.js"></script>
 </body>
 
